# gambasdwg

TEMPLATE/conf/: gb.dwg.conf
comp/src/gb.gui.base/.lang/: fr.po
gb.dbus/src/: c_dbus.h
gb.dwg/: configure.ac
gb.dwg/src/: Makefile.am  gb.dwg.component
gb.poppler/: configure.ac
